# pixel-count-microservice

./: .dockerignore  .gitignore  2.ndpa  README.md  Readme.md  account_details.txt  backend.Dockerfile  db.sqlite3  docker-compose.yaml  frontend.Dockerfile  manage.py  package-lock.json  pyproject.toml  startup.sh
Flask/: .gitignore  fileoperation.py  openSlide.py  pyproject.toml  server-dets.txt  server.py
image_processor/: fileoperation.py  models.py  openSlide.py  openslide_helper.py  serializers.py  urls.py  views.py
image_processor/migrations/: 0001_initial.py
image_processor/templates/: 404.html  index.html  login.html  register.html  view_image.html
maharshi-flask-app/: server.py
pixel_counter/: asgi.py  settings.py  urls.py  wsgi.py
reactOpenSeaDrag-master/: package-lock.json  package.json
reactOpenSeaDrag-master/src/: App.css  App.js  index.css  index.js
reactOpenSeaDrag-master/src/components/: DeepZoomViewer.js  FileViewer.js  FreqIntGraph.js  Login.js  ReactGallery.js  Signup.js  SuspectedTileViewer.js
reactOpenSeaDrag-master/src/util/: datamanager.js
static/frontend/: asset-manifest.json  index.html
static/frontend/js/: 787.276014f5.chunk.js  main.f0a94828.js.LICENSE.txt
static/frontend/static/css/: main.51043663.css  main.51043663.css.map  main.66ead850.css  main.66ead850.css.map  main.7181291c.css  main.7181291c.css.map  main.75ee5765.css  main.75ee5765.css.map  main.d166608e.css  main.d166608e.css.map  (+2 more)
staticfiles/: asset-manifest.json  index.html
staticfiles/css/: main.f6dc73b0.css.map
staticfiles/images/: test.ndpa  test1.ndpa
(+18 files in other folders)
